--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:single-run": "ng test --browsers=ChromeHeadless --watch=false",
     "lint": "ng lint"
+  },
+  "engines": {
+    "npm": "9.5.x",
+    "node": "18.16.x"
   },
   "private": true,
   "dependencies": {
@@ -43,12 +48,13 @@
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
     "eslint": "^8.40.0",
+    "eslint-plugin-import": "^2.27.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "5.0.4"
   }
 }
