--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@capacitor/cli": "^5.0.5",
     "@capacitor/core": "^5.0.5",
     "@capacitor/ios": "^5.0.5",
+    "apollo-angular": "5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@apollo/client": "3.7.14",
+    "graphql": "16.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
