--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,8 @@
         "no-console": "off",
         "id-blacklist": ["error", "callback"],
         "semi": ["error", "always"],
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "@typescript-eslint/no-explicit-any": "off"
       }
     },
     {
