--- a/package.json
+++ b/package.json
@@ -28,16 +28,19 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@apollo/client": "3.7.14",
     "@capacitor/android": "^5.0.5",
-    "@capacitor/cli": "^5.0.5",
-    "@capacitor/core": "^5.0.5",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.2.2",
+    "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.0.5",
+    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/status-bar": "5.0.6",
     "apollo-angular": "5.0.0",
+    "graphql": "16.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@apollo/client": "3.7.14",
-    "graphql": "16.6.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
@@ -48,6 +51,7 @@
     "@angular-eslint/template-parser": "16.0.3",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
+    "@capacitor/cli": "5.2.2",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
