--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@apollo/client": "3.7.14",
-    "@capacitor/android": "^5.0.5",
+    "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "^5.0.5",
+    "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic/angular": "^7.2.1",
+    "@ionic/cli": "^7.1.1",
     "apollo-angular": "5.0.0",
     "graphql": "16.6.0",
     "rxjs": "~7.8.0",
@@ -63,6 +65,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@ionic/angular-toolkit": "latest"
   }
 }
