--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
-    "@angular/google-maps": "^16.1.4",
+    "@angular/google-maps": "16.1.7",
     "@angular/material": "^16.1.2",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
@@ -32,6 +32,7 @@
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
@@ -54,6 +55,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@capacitor/cli": "5.2.2",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
@@ -65,7 +67,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "5.0.4",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "5.0.4"
   }
 }
