--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
-    "@angular/google-maps": "16.1.7",
+    "@angular/google-maps": "^16.2.0",
     "@angular/material": "^16.1.2",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
@@ -56,6 +56,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@capacitor/cli": "5.2.2",
     "@ionic/angular-toolkit": "latest",
+    "@types/google.maps": "^3.53.6",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
