--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,8 +2,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["google.maps"]
   },
   "files": [
     "src/main.ts"
