--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,9 +2,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine", "google.maps"
     ]
   },
   "include": [
