--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,8 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "./out-tsc/app",
-    "types": ["google.maps"]
+    "outDir": "./out-tsc/app"
   },
   "files": [
     "src/main.ts"
