--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,7 @@
     "skipLibCheck": true,
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine", "google.maps"
+      "jasmine"
     ]
   },
   "include": [
