--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
     "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.3.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
