--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBOmdqASwwGxnxF2V-30nV98G1f32042Ng"/>
+
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
             android:name=".MainActivity"
@@ -32,9 +34,6 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"></meta-data>
-            <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyBOmdqASwwGxnxF2V-30nV98G1f32042Ng"/>
         </provider>
     </application>
 
