--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
     "@apollo/client": "3.7.14",
+    "@awesome-cordova-plugins/core": "^6.4.0",
+    "@awesome-cordova-plugins/native-geocoder": "^6.4.0",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
@@ -40,6 +42,7 @@
     "@ionic/angular": "^7.2.1",
     "@ionic/cli": "^7.1.1",
     "apollo-angular": "5.0.0",
+    "cordova-plugin-nativegeocoder": "^3.5.1",
     "graphql": "16.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
