--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
     "@capacitor/geolocation": "^5.0.6",
-    "@capacitor/google-maps": "^5.3.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.2.1",
     "@ionic/cli": "^7.1.1",
+    "@types/google.maps": "^3.54.1",
     "apollo-angular": "5.0.0",
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "graphql": "16.6.0",
