--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "./out-tsc/app"
+    "outDir": "./out-tsc/app",
+    "typeRoots": [
+      "node_modules/@types",
+  ],
   },
   "files": [
     "src/main.ts"
