--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "host": "ng s --host 0.0.0.0",
     "dev": "ng s --hmr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
