--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^16.2.1",
     "@apollo/client": "3.7.14",
     "@awesome-cordova-plugins/core": "^6.4.0",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
