--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^16.2.1",
     "@apollo/client": "3.7.14",
     "@awesome-cordova-plugins/core": "^6.4.0",
+    "@awesome-cordova-plugins/native-page-transitions": "^6.4.0",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
@@ -43,6 +44,7 @@
     "@ionic/cli": "^7.1.1",
     "@types/google.maps": "^3.54.1",
     "apollo-angular": "5.0.0",
+    "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "graphql": "16.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
