--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.2",
